fixes #3291: remove float on responsive .thumbnails for 767px and down to ensure thumbnail images don't pop out of container in FF

--- a/docs/assets/css/bootstrap-responsive.css
+++ b/docs/assets/css/bootstrap-responsive.css
@@ -805,7 +805,11 @@
     display: block;
     float: none;
     width: auto;
+    max-width: 100%;
     margin-left: 0;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
   }
   .input-large,
   .input-xlarge,
